--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -245,8 +245,52 @@ a {
 .cf {
   zoom:1;
 }
+/*DROPDOWN MENU---------*/
+/* Dropdown Button */
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
 
-/*tabs--------------------*/
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+    background-color: #3e8e41;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {display:block;}
+
+/*tabs--------------------*//*
 
 #Tabs ul {
 padding: 0px;
@@ -274,13 +318,13 @@ z-index: 9999;
 border: 1px solid #ccc;
 border-bottom: 0px;
 
-/* The following four lines are to make the top left and top right corners of each tab rounded. */
+/* The following four lines are to make the top left and top right corners of each tab rounded. *//*
 -moz-border-radius-topleft: 4px;
 border-top-left-radius: 4px;
 -moz-border-radius-topright: 4px;
 border-top-right-radius: 4px;
 /* end of rounded borders */
-
+/*
 width: 130px;
 color: #000000;
 text-decoration: none;
@@ -290,8 +334,8 @@ font-weight: bold;
 #Tabs ul li a:hover {
 text-decoration: underline; /* a very simple effect when hovering the mouse on tab*/
 }
-
-#Tabs #Content_Area { /* this is the css class for the content displayed in each tab*/
+/*
+#Tabs #Content_Area { /* this is the css class for the content displayed in each tab
 padding: 0 15px;
 clear:both;
 overflow:hidden;
@@ -303,4 +347,4 @@ height: 150px;
 overflow: hidden;
 }
 
-p { padding-left: 15px; }
+p { padding-left: 15px; }*/
