--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -248,7 +248,7 @@ a {
 /*DROPDOWN MENU---------*/
 /* Dropdown Button */
 .dropbtn {
-    background-color: #4CAF50;
+    background-color: #26bbc7;
     color: white;
     padding: 16px;
     font-size: 16px;
@@ -258,7 +258,7 @@ a {
 
 /* Dropdown button on hover & focus */
 .dropbtn:hover, .dropbtn:focus {
-    background-color: #3e8e41;
+    background-color: #2499a3;
 }
 
 /* The container <div> - needed to position the dropdown content */
