--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -248,7 +248,9 @@ a {
 /*DROPDOWN MENU---------*/
 /* Dropdown Button */
 .dropbtn {
-    background-color: #26bbc7;
+    /*background-color: #26bbc7;*/
+      background: -webkit-linear-gradient(top, rgba(40, 40, 40, 0.3), rgba(35, 35, 35, 0.3) 50%, rgba(10, 10, 10, 0.3) 50%, rgba(0, 0, 0, 0.3));
+
     color: white;
     padding: 16px;
     font-size: 16px;
