--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -353,7 +353,7 @@ p { padding-left: 15px; }*/
 body {margin:0;}
 
 ul {
-    list-style-type: none;
+    /*list-style-type: none;*/
     margin: 0;
     padding: 0;
     overflow: hidden;
