--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -367,18 +367,21 @@ li {
     float: left;
 }
 
-li a {
-    display: block;
+li a, .dropbtn {
+    display: inline-block;
     color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
 
-li a:hover:not(.active) {
+li a:hover, .dropdown:hover .dropbtn {
     background-color: #111;
 }
 
+li.dropdown {
+    display: inline-block;
+}
 .active {
     background-color: #1f2760;
 }
