--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -246,9 +246,9 @@ a {
   zoom:1;
 }
 /*DROPDOWN MENU---------*/
-/* Dropdown Button */
+/* Dropdown Button 
 .dropbtn {
-    /*background-color: #26bbc7;*/
+    /*background-color: #26bbc7;
       background: -webkit-linear-gradient(top, rgba(40, 40, 40, 0.3), rgba(35, 35, 35, 0.3) 50%, rgba(10, 10, 10, 0.3) 50%, rgba(0, 0, 0, 0.3));
 
     color: white;
@@ -256,12 +256,12 @@ a {
     font-size: 16px;
     border: none;
     cursor: pointer;
-}
+}*/
 
-/* Dropdown button on hover & focus */
+/* Dropdown button on hover & focus 
 .dropbtn:hover, .dropbtn:focus {
     background-color: #2499a3;
-}
+}*/
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
