--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -263,11 +263,11 @@ a {
     background-color: #2499a3;
 }*/
 
-/* The container <div> - needed to position the dropdown content */
+/* The container <div> - needed to position the dropdown content 
 .dropdown {
     position: relative;
     display: inline-block;
-}
+}*/
 
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
