--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -246,121 +246,12 @@ a {
   zoom:1;
 }
 /*DROPDOWN MENU---------*/
-/* Dropdown Button 
-.dropbtn {
-    /*background-color: #26bbc7;
-      background: -webkit-linear-gradient(top, rgba(40, 40, 40, 0.3), rgba(35, 35, 35, 0.3) 50%, rgba(10, 10, 10, 0.3) 50%, rgba(0, 0, 0, 0.3));
-
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}*/
-
-/* Dropdown button on hover & focus 
-.dropbtn:hover, .dropbtn:focus {
-    background-color: #2499a3;
-}*/
-
-/* The container <div> - needed to position the dropdown content 
-.dropdown {
-    position: relative;
-    display: inline-block;
-}*/
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #f1f1f1}
-
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {display:block;}
-
-/*tabs--------------------*//*
-
-#Tabs ul {
-padding: 0px;
-margin: 0px;
-margin-left: 10px;
-list-style-type: none;
-}
-
-#Tabs ul li {
-display: inline-block;
-clear: none;
-float: left;
-height: 24px;
-}
-
-#Tabs ul li a {
-position: relative;
-margin-top: 16px;
-display: block;
-margin-left: 6px;
-line-height: 24px;
-padding-left: 10px;
-background: #f6f6f6;
-z-index: 9999;
-border: 1px solid #ccc;
-border-bottom: 0px;
-
-/* The following four lines are to make the top left and top right corners of each tab rounded. *//*
--moz-border-radius-topleft: 4px;
-border-top-left-radius: 4px;
--moz-border-radius-topright: 4px;
-border-top-right-radius: 4px;
-/* end of rounded borders */
-/*
-width: 130px;
-color: #000000;
-text-decoration: none;
-font-weight: bold;
-}
-
-#Tabs ul li a:hover {
-text-decoration: underline; /* a very simple effect when hovering the mouse on tab*/
-}
-/*
-#Tabs #Content_Area { /* this is the css class for the content displayed in each tab
-padding: 0 15px;
-clear:both;
-overflow:hidden;
-line-height:19px;
-position: relative;
-top: 20px;
-z-index: 5;
-height: 150px;
-overflow: hidden;
-}
-
-p { padding-left: 15px; }*/
-body {margin:0;}
-
 ul {
-    /*list-style-type: none;*/
+    list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
     background-color: #333;
-    position: fixed;
-    top: 0;
-    width: 100%;
 }
 
 li {
@@ -376,12 +267,31 @@ li a, .dropbtn {
 }
 
 li a:hover, .dropdown:hover .dropbtn {
-    background-color: #111;
+    background-color: red;
 }
 
 li.dropdown {
     display: inline-block;
 }
-.active {
-    background-color: #1f2760;
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
