--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -250,7 +250,8 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    position: fixed;
+    width:100%;
     background-color: #333;
 }
 
